[gd_scene load_steps=4 format=2]

[ext_resource path="res://Util/SexActivityCreator/ActionArgScenes/BaseActionArg.tscn" type="PackedScene" id=1]
[ext_resource path="res://Util/SexActivityCreator/ActionArgScenes/FetishesWithNumbers.gd" type="Script" id=2]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=3]

[node name="FetishesWithNumbers" instance=ExtResource( 1 )]
rect_min_size = Vector2( 0, 200 )
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="." index="0"]
margin_top = -1.0
margin_right = 1280.0
margin_bottom = 24.4
text = "Something something"

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 107.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" index="0"]
margin_right = 1280.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer" index="0"]
margin_top = -1.0
margin_right = 48.4
margin_bottom = 24.4
text = "Name"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer" index="1"]
margin_left = 51.0
margin_right = 1280.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer" index="1"]
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 53.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2" index="0"]
margin_top = -1.0
margin_right = 46.4
margin_bottom = 24.4
text = "Value"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2" index="1"]
margin_left = 49.0
margin_right = 1280.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "1.0"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer" index="2"]
margin_top = 56.0
margin_right = 1280.0
margin_bottom = 79.0

[node name="AddFetishButton" type="Button" parent="VBoxContainer/HBoxContainer3" index="0"]
margin_right = 32.0
margin_bottom = 23.0
text = "Add"

[node name="RemoveFetishButton" type="Button" parent="VBoxContainer/HBoxContainer3" index="1"]
margin_left = 35.0
margin_right = 98.0
margin_bottom = 23.0
text = "Remove"

[node name="FetishList" type="ItemList" parent="." index="2"]
margin_top = 110.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer3/AddFetishButton" to="." method="_on_AddFetishButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/RemoveFetishButton" to="." method="_on_RemoveFetishButton_pressed"]
